--- a/src/components/Contactsection.astro
+++ b/src/components/Contactsection.astro
@@ -27,7 +27,8 @@
               <div>
                 <h5 class="mb-[18px] text-lg font-semibold text-dark dark:text-white">Our Location</h5>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  401 Broadway, 24th Floor, Orchard Cloud View, London
+                  Plot 966, Block 246, Bukasa, Muyenga,
+                   Kampala, Uganda
                 </p>
               </div>
             </div>
@@ -40,9 +41,9 @@
               </div>
               <div>
                 <h5 class="mb-[18px] text-lg font-semibold text-dark dark:text-white">How Can We Help?</h5>
-                <p class="text-base text-body-color dark:text-dark-6">info@yourdomain.com</p>
+                <p class="text-base text-body-color dark:text-dark-6">+256 414 670 413</p>
                 <p class="text-base text-body-color dark:text-dark-6 mt-1">
-                  contact@yourdomain.com
+                  
                 </p>
               </div>
             </div>
