--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -2,27 +2,27 @@
 const features = [
   {
     icon: 'assets/features/icon-01.svg',
-    title: 'Free and Open-Source',
+    title: 'Our Vision',
     ref: 'javascript:void(0)',
     refTitle: 'Learn More',
     description:
-      'Lorem Ipsum is simply dummy text of the printing and industry.',
+      'To help businesses achieve organizational success as well as provide them with a high caliber of quality products, services and manpower for projects and permanent work.',
   },
   {
     icon: 'assets/features/icon-02.svg',
-    title: 'Multipurpose Template',
+    title: 'Our Mission',
     ref: 'javascript:void(0)',
     refTitle: 'Learn More',
     description:
-      'Lorem Ipsum is simply dummy text of the printing and industry.',
+      'To change and maintain the highest levels of professionalism as we strive to be the preferred source of human resources and consultancy services in the finance, development, investment and construction industries. That is coupled to being the number one provider of transport & logistics, construction equipment,building material and food & beverage supplies within and outside Uganda.',
   },
   {
     icon: 'assets/features/icon-03.svg',
-    title: 'High-quality Design',
+    title: 'Our Values',
     ref: 'javascript:void(0)',
     refTitle: 'Learn More',
     description:
-      'Lorem Ipsum is simply dummy text of the printing and industry.',
+      'Integrity,Accountability,Respect, Team Work ,Client Satisfaction',
   },
   {
     icon: 'assets/features/icon-04.svg',
