--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -1,9 +1,13 @@
 ---
 const teams = [
-  {name: "Matheus Ferrero", description: "Marketing Expert", image: "/assets/team/team-01.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Stuard Ferrel", description: "Digital Marketer", image: "/assets/team/team-02.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Eva Hudson", description: "Creative Designer", image: "/assets/team/team-03.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Jackie Sanders", description: "SEO Expert", image: "/assets/team/team-04.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Ahmed Alkhadher Nasser Kharesh", description: "Chief Executive Officer", image: "/assets/kwizy/ceo.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Mireille Kwizera", description: "Managing Director ", image: "/assets/kwizy/kwizy.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Mohammed Al-Snaai", description: "Information Technology Specialist", image: "/assets/kwizy/cto.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Bakayana Ronald", description: "DIRECTOR (Business Development)", image: "/assets/kwizy/bd.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Ddamba Deogratius", description: "Accounts Manager", image: "/assets/kwizy/accounts.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Ruth Kamukama", description: "Transport & Logistics Analyst", image: "/assets/kwizy/ruth.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Miriam Nangobi", description: "Human Resource Manager", image: "/assets/kwizy/hr.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  
 ]
 ---
 
@@ -17,11 +21,9 @@ const teams = [
             Our Team Members
           </span>
           <h2 class="mb-3 text-3xl leading-[1.2] font-bold text-dark dark:text-white sm:text-4xl md:text-[40px]">
-            Our Creative Team
+            Meet our Team
           </h2>
           <p class="text-body-color dark:text-dark-6 text-base">
-            There are many variations of passages of Lorem Ipsum available
-            but the majority have suffered alteration in some form.
           </p>
         </div>
       </div>
