changed the logo

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -108,7 +108,7 @@ const footerLinks = [
             class="mb-6 inline-block max-w-[160px]"
           >
             <img
-              src="/assets/logo/logo-white.svg"
+              src="/assets/kwizy/main-logo.jpg"
               alt="logo"
               class="max-w-full"
             />
