--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -31,10 +31,10 @@ const features = [
       <div class="w-full px-4">
         <div class="mb-12 mx-auto max-w-[485px] lg:mb-[70px] text-center">
           <span class="mb-2 block text-lg font-semibold text-primary">
-            Features
+            
           </span>
           <h2 class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]">
-            Main Features Of Play
+            Our Vision, Mission and Values
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
             There are many variations of passages of Lorem Ipsum available
