--- a/src/components/Formbox.astro
+++ b/src/components/Formbox.astro
@@ -10,7 +10,7 @@
           <div class="mb-10 text-center">
             <a href="/" class="mx-auto inline-block max-w-[160px]">
               <img src="/assets/logo/logo.svg" alt="logo" class="dark:hidden" />
-              <img src="/assets/logo/logo-white.svg" alt="logo" class="hidden dark:block" />
+              <img src="/assets/kwizy/main-logo.jpg" alt="logo" class="hidden dark:block" />
             </a>
           </div>
 
