--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -47,13 +47,13 @@ const menuitems = [
         <a href="/" class="navbar-logo block w-full py-5">
           {(Astro.url.pathname === '/') ? (
             <img
-              src="/assets/logo/logo-white.svg"
+              src="/assets/kwizy/main-logo.jpg"
               alt="logo"
               class="header-logo w-full"
             />
           ) : (
-            <img src="/assets/logo/logo.svg" alt="logo" class="w-full dark:hidden" />
-            <img src="/assets/logo/logo-white.svg" alt="logo" class="w-full hidden dark:block" />
+            <img src="/assets/kwizy/main-logo.jpg" alt="logo" class="w-full dark:hidden" />
+            <img src="/assets/kwizy/main-logo.jpg" alt="logo" class="w-full hidden dark:block" />
           )}
           
         </a>
