removed some sections

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,10 @@
           <p
             class="mx-auto mb-9 max-w-[600px] font-medium text-base text-white sm:text-lg sm:leading-[1.44]"
           >
-          We are a dynamic company incorporated in Uganda, East Africa. Our goal is providing sustainable and innovative solutions to a number of sectors such as; construction, industrial, transport, agricultural and oil & gas sectors among others, in Uganda and abroad.
+          We are a dynamic company incorporated in Uganda, East Africa. </p>  
+          <p 
+          class="mx-auto mb-9 max-w-[600px] font-medium text-base text-white sm:text-lg sm:leading-[1.44]"                                
+          <n></n> Victory Vision Limited is a leading transport and logistics provider committed to delivering comprehensive and reliable solutions. With a foundation built on efficiency and innovation, we specialize in providing general transport solutions tailored to meet the diverse needs of our clients.
           </p>
           <ul class="mb-10 flex gap-5 flex-wrap items-center justify-center">
             
