changed team titles

--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -2,11 +2,11 @@
 const teams = [
   {name: "Ahmed Alkhadher Nasser Kharesh (CEO)", description: "Chief Executive Officer", image: "/assets/kwizy/ceo.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
   {name: "Mireille Kwizera (MD) ", description: "Managing Director ", image: "/assets/kwizy/kwizy.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Mohammed Al-Snaai", description: "Information Technology Specialist", image: "/assets/kwizy/cto.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Bakayana Ronald", description: "DIRECTOR (Business Development)", image: "/assets/kwizy/bd.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Ddamba Deogratius", description: "Accounts Manager", image: "/assets/kwizy/accounts.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Mohammed Al-Snaai (CTO)", description: "Information Technology Specialist", image: "/assets/kwizy/cto.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Bakayana Ronald (BD)", description: "DIRECTOR (Business Development)", image: "/assets/kwizy/bd.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Ddamba Deogratius ", description: "Accounts Manager", image: "/assets/kwizy/accounts.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
   {name: "Ruth Kamukama", description: "Transport & Logistics Analyst", image: "/assets/kwizy/ruth.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Miriam Nangobi", description: "Human Resource Manager", image: "/assets/kwizy/hr.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Miriam Nangobi (HR)", description: "Human Resource Manager", image: "/assets/kwizy/hr.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
   
 ]
 ---
