changed the footer

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -5,21 +5,14 @@ const features = [
     title: 'Our Vision',
     ref: 'javascript:void(0)',
     description:
-      'To help businesses achieve organizational success as well as provide them with a high caliber of quality products, services and manpower for projects and permanent work.',
+      'Connecting people,businesses and communities to a better future through transport and logistics',
   },
   {
     icon: 'assets/features/icon-02.svg',
     title: 'Our Mission',
     ref: 'javascript:void(0)',
     description:
-      'To change and maintain the highest levels of professionalism as we strive to be the preferred source of human resources and consultancy services in the finance, development, investment and construction industries. That is coupled to being the number one provider of transport & logistics, construction equipment,building material and food & beverage supplies within and outside Uganda.',
-  },
-  {
-    icon: 'assets/features/icon-03.svg',
-    title: 'Our Values',
-    ref: 'javascript:void(0)',
-    description:
-      'Integrity,Accountability,Respect, Team Work ,Client Satisfaction',
+      'Providing unique,professional and tailored logistics solutions to international freight transport and logistics itself in order to successfully meet and support  all of our customers needs.',
   }
 ];
 ---
@@ -34,7 +27,7 @@ const features = [
             
           </span>
           <h2 class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]">
-            Our Vision, Mission and Values
+            Our Vision and Mission
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
           </p>
