--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -13,6 +13,13 @@ const features = [
     ref: 'javascript:void(0)',
     description:
       'Providing unique,professional and tailored logistics solutions to international freight transport and logistics itself in order to successfully meet and support  all of our customers needs.',
+  },
+  {
+    icon: 'assets/features/icon-02.svg',
+    title: 'Our Values',
+    ref: 'javascript:void(0)',
+    description:
+      'Integrity, Accountability, Respect, Team Work, Client, Satisfaction',
   }
 ];
 ---
@@ -27,7 +34,7 @@ const features = [
             
           </span>
           <h2 class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]">
-            Our Vision and Mission
+            Our Vision , Mission and Values 
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
           </p>
