--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -19,7 +19,7 @@ const features = [
     title: 'Our Values',
     ref: 'javascript:void(0)',
     description:
-      'Integrity, Accountability, Respect, Team Work, Client, Satisfaction',
+      'Integrity, Accountability, Respect, Team Work, Client Satisfaction',
   }
 ];
 ---
