--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -1,7 +1,7 @@
 ---
 const teams = [
-  {name: "Ahmed Alkhadher Nasser Kharesh (CEO)", description: "DIRECTOR (CEO)", image: "/assets/kwizy/ceo.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Mireille Kwizera (MD) ", description: "DIRECTOR (MD) ", image: "/assets/kwizy/kwizy.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Ahmed Alkhadher Nasser Kharesh (CEO)", description: "DIRECTOR ", image: "/assets/kwizy/ceo.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Mireille Kwizera (MD) ", description: "DIRECTOR  ", image: "/assets/kwizy/kwizy.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
   {name: "Mohammed Al-Snaai (CTO)", description: "Information Technology Specialist", image: "/assets/kwizy/cto.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
   {name: "Bakayana Ronald (BD)", description: "DIRECTOR (Business Development)", image: "/assets/kwizy/bd.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
   {name: "Ddamba Deogratius ", description: "Accounts Manager", image: "/assets/kwizy/accounts.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
