--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -1,2 +1,139 @@
 <!-- ====== About Section Start -->
+<div class="relative overflow-hidden bg-gray-900 pt-16 pb-32 space-y-24">
+  <div class="relative">
+      <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-2 lg:gap-24 lg:px-8 ">
+          <div class="mx-auto max-w-xl px-6 lg:mx-0 lg:max-w-none lg:py-16 lg:px-0 ">
+              <div>
+                  <div>
+                    <h1 class="text-3xl font-bold tracking-tight text-white">
+                      Services We Provide:
+                  </h1>
+                  </div>
+
+                  <div class="mt-6">
+                      <h2 class="text-3xl font-bold tracking-tight text-white">
+                          Sea and Air Frieght
+                      </h2>
+                      <p class="mt-4 text-lg text-gray-300">
+                        We take care urgency as the driving force of our business. We have a dedicated team of professionals who are available 24/7 to assist you with your queries. We are committed to providing you with the best possible service at the most competitive price.    
+                      </p>
+                      <div class="mt-6">
+                          <a class="inline-flex rounded-lg bg-pink-600 px-4 py-1.5 text-base font-semibold leading-7 text-white shadow-sm ring-1 ring-pink-600 hover:bg-pink-700 hover:ring-pink-700"
+                              href="/login">
+                              Learn More
+                          </a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="mt-12 sm:mt-16 lg:mt-0">
+              <div class="-mr-48 pl-6 md:-mr-16 lg:relative lg:m-0 lg:h-full lg:px-0">
+                  <img loading="lazy" width="647" height="486"
+                      class="w-full rounded-xl shadow-2xl ring-1 ring-black ring-opacity-5 lg:absolute lg:left-0 lg:h-full lg:w-auto lg:max-w-none"
+                      style="color:transparent" src="/public/assets/kwizy/tools.jpg">
+              </div>
+          </div>
+      </div>
+  </div>
+
+
+
+  <div class="relative">
+      <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-2 lg:gap-24 lg:px-8 ">
+          <div class="mx-auto max-w-xl px-6 lg:mx-0 lg:max-w-none lg:py-16 lg:px-0 lg:col-start-2">
+              <div>
+                  <div>
+                      <span class="flex h-12 w-12 items-center justify-center rounded-xl bg-pink-500">
+                          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                              stroke-width="1.5" stroke="currentColor" aria-hidden="true"
+                              class="h-8 w-8 text-white">
+                              <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 00.75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 00-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0112 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 01-.673-.38m0 0A2.18 2.18 0 013 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 013.413-.387m7.5 0V5.25A2.25 2.25 0 0013.5 3h-3a2.25 2.25 0 00-2.25 2.25v.894m7.5 0a48.667 48.667 0 00-7.5 0M12 12.75h.008v.008H12v-.008z">
+                              </path>
+                          </svg>
+                      </span>
+                  </div>
+                  <div class="mt-6">
+                      <h2 class="text-3xl font-bold tracking-tight text-white">
+                          Haulage
+                      </h2>
+                      <p class="mt-4 text-lg text-gray-300">
+                      We arrange safe and fast transportation of your cargo, by sea or air, at a competitive and customer friendly prices.
+                      </p>
+                      <div class="mt-6">
+                          <a class="inline-flex rounded-lg bg-pink-600 px-4 py-1.5 text-base font-semibold leading-7 text-white shadow-sm ring-1 ring-pink-600 hover:bg-pink-700 hover:ring-pink-700"
+                              href="/login">
+                              Learn More
+                          </a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="mt-12 sm:mt-16 lg:mt-0">
+              <div class="-ml-48 pr-6 md:-ml-16 lg:relative lg:m-0 lg:h-full lg:px-0">
+                  <img alt="Inbox user interface" loading="lazy" width="647" height="486"
+                      class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none"
+                      style="color:transparent" src="/public/assets/kwizy/bike.jpg">
+              </div>
+          </div>
+      </div>
+  </div>
+
+</div>
+<div class="bg-gray-900 p-4 min-h-screen">
+  <div aria-hidden="true" class="absolute inset-0 h-max w-full m-auto grid grid-cols-2 -space-x-52 opacity-20">
+    <div class="blur-[106px] h-56 bg-gradient-to-br  to-purple-400 from-blue-700"></div>
+    <div class="blur-[106px] h-32 bg-gradient-to-r from-cyan-400  to-indigo-600"></div>
+  </div>
+  <div class="max-w-7xl mx-auto px-6 md:px-12 xl:px-6">
+    <div class="md:w-2/3 lg:w-1/2 mt-12 text-gray-100">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6 text-secondary">
+        <path fill-rule="evenodd"
+          d="M9 4.5a.75.75 0 01.721.544l.813 2.846a3.75 3.75 0 002.576 2.576l2.846.813a.75.75 0 010 1.442l-2.846.813a3.75 3.75 0 00-2.576 2.576l-.813 2.846a.75.75 0 01-1.442 0l-.813-2.846a3.75 3.75 0 00-2.576-2.576l-2.846-.813a.75.75 0 010-1.442l2.846-.813A3.75 3.75 0 007.466 7.89l.813-2.846A.75.75 0 019 4.5zM18 1.5a.75.75 0 01.728.568l.258 1.036c.236.94.97 1.674 1.91 1.91l1.036.258a.75.75 0 010 1.456l-1.036.258c-.94.236-1.674.97-1.91 1.91l-.258 1.036a.75.75 0 01-1.456 0l-.258-1.036a2.625 2.625 0 00-1.91-1.91l-1.036-.258a.75.75 0 010-1.456l1.036-.258a2.625 2.625 0 001.91-1.91l.258-1.036A.75.75 0 0118 1.5zM16.5 15a.75.75 0 01.712.513l.394 1.183c.15.447.5.799.948.948l1.183.395a.75.75 0 010 1.422l-1.183.395c-.447.15-.799.5-.948.948l-.395 1.183a.75.75 0 01-1.422 0l-.395-1.183a1.5 1.5 0 00-.948-.948l-1.183-.395a.75.75 0 010-1.422l1.183-.395c.447-.15.799-.5.948-.948l.395-1.183A.75.75 0 0116.5 15z"
+          clip-rule="evenodd"></path>
+      </svg>
+      <h2 class="my-8 text-2xl font-bold text-white md:text-4xl">Our Partners</h2>
+      <p class="text-gray-300">These are our trusted partners who are world class in what they do. </p>
+    </div>
+    <div
+      class="mt-16 grid divide-x divide-y  divide-gray-700 overflow-hidden  rounded-3xl border text-gray-600 border-gray-700 sm:grid-cols-2 lg:grid-cols-4  lg:divide-y-0 xl:grid-cols-4">
+      <div class="group relative bg-gray-800 transition hover:z-[1] hover:shadow-2xl  hover:shadow-gray-600/10">
+        <div class="relative space-y-8 py-12 p-8">
+          <img src="/public/assets/kwizy/aramex.png" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent">
+          <div class="space-y-2">
+            <h5 class="text-xl font-semibold text-white transition group-hover:text-secondary">Aramex</h5>
+            <p class="text-gray-300">Delivery Unlimited</p>
+          </div>
+        </div>
+      </div>
+      <div class="group relative bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
+        <div class="relative space-y-8 py-12 p-8">
+          <img src="/public/assets/kwizy/wahab.png" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent" >
+          <div class="space-y-2">
+            <h5 class="text-xl font-semibold text-white transition group-hover:text-secondary">Wahab San Frontiers</h5>
+            <p class="text-gray-300">We deliver your products on time  with pure safety.</p>
+          </div>
+        </div>
+      </div>
+      <div class="group relative bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
+        <div class="relative space-y-8 py-12 p-8">
+          <img src="/public/assets/kwizy/fedex.png" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent" >
+          <div class="space-y-2">
+            <h5 class="text-xl font-semibold text-white transition group-hover:text-secondary">FedEx</h5>
+            <p class="text-gray-300">Fast and efficient.</p>
+          </div>
+        </div>
+      </div>
+      <div class="group relative bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
+        <div class="relative space-y-8 py-12 p-8">
+          <img src="/public/assets/kwizy/fit.jpg" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent">
+          <div class="space-y-2">
+            <h5 class="text-xl font-semibold text-white transition group-hover:text-secondary">Freight In Time (FIT) express</h5>
+            <p class="text-gray-300">Not Just Logistics.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- ====== About Section End -->
