changed the favicon

--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -15,7 +15,7 @@
                           Sea and Air Frieght
                       </h2>
                       <p class="mt-4 text-lg text-gray-300">
-                        We take care urgency as the driving force of our business. We have a dedicated team of professionals who are available 24/7 to assist you with your queries. We are committed to providing you with the best possible service at the most competitive price.    
+                        We take cargo urgency as the driving force of our business. We have a dedicated team of professionals who are available 24/7 to assist you with your queries. We are committed to providing you with the best possible service at the most competitive price.    
                       </p>
                       <div class="mt-6">
                           
