--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -16,6 +16,10 @@ const menuitems = [
     title: "Contact",
     path: "/#contact",
   },
+  {
+    title: "Our Work",
+    path: "/#work",
+  }
   
 ];
 ---
