--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,11 +11,12 @@ import Team from '../components/Team.astro';
 import Contact from '../components/Contactsection.astro';
 import CTA from '../components/CTAsection.astro';
 import Blogsection from '../components/Blogsection.astro';
+import Work from '../components/Worksection.astro';
 ---
 
 <Layout
-  description="Play Astro is a free and open-source Astro template, built for startups, SaaS companies, apps, businesses, and more."
-  title="Free Astro Template and Starter for SaaS, Startup, and App Sites | Play Astro"
+  description="Victory Vision Uganda"
+  title="Victory Vision Uganda"
 >
   <Hero />
   <Features />
@@ -27,4 +28,5 @@ import Blogsection from '../components/Blogsection.astro';
   <Blogsection />
   <Contact />
   <Clients />
+  <Work />
 </Layout>
