--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,7 +16,7 @@ publishedBlogEntries.sort(function (a, b) {
 ---
 
 <Layout
-  description="Play Astro is a free and open-source Astro template, built for SaaS, startup, business and software website. Play crafted in a way that you can use with almost all sort of web project."
+  description="Victory Vision Uganda"
   title="Blog | Play Astro"
 >
   <Breadcrumb>
