--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,7 @@ import Contactsection from '../components/Contactsection.astro';
 ---
 
 <Layout
-  description="Play Astro is a free and open-source Astro template, built for SaaS, startup, business and software website. Play crafted in a way that you can use with almost all sort of web project."
+  description="Victory Vision Uganda"
   title="Contact | Play Astro"
 >
   <Breadcrumb>
