fixed an image bug

--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -27,7 +27,7 @@
               <div class="-mr-48 pl-6 md:-mr-16 lg:relative lg:m-0 lg:h-full lg:px-0">
                   <img loading="lazy" width="647" height="486"
                       class="w-full rounded-xl shadow-2xl ring-1 ring-black ring-opacity-5 lg:absolute lg:left-0 lg:h-full lg:w-auto lg:max-w-none"
-                      style="color:transparent" src="/public/assets/kwizy/bike-logo.jpg">
+                      style="color:transparent" src="/assets/kwizy/bike-logo.jpg">
               </div>
           </div>
           
