fixed all image bugs

--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -66,7 +66,7 @@
               <div class="-ml-48 pr-6 md:-ml-16 lg:relative lg:m-0 lg:h-full lg:px-0">
                   <img alt="Inbox user interface" loading="lazy" width="647" height="486"
                       class="w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none"
-                      style="color:transparent" src="/public/assets/kwizy/bike.jpg">
+                      style="color:transparent" src="/assets/kwizy/bike.jpg">
               </div>
           </div>
       </div>
@@ -92,7 +92,7 @@
       class="mt-16 grid divide-x divide-y  divide-gray-700 overflow-hidden  rounded-3xl border text-gray-600 border-gray-700 sm:grid-cols-2 lg:grid-cols-4  lg:divide-y-0 xl:grid-cols-4">
       <div class="group relative bg-gray-800 transition hover:z-[1] hover:shadow-2xl  hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
-          <img src="/public/assets/kwizy/aramex.png" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent">
+          <img src="/assets/kwizy/aramex.png" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent">
           <div class="space-y-2">
             <h5 class="text-xl font-semibold text-white transition group-hover:text-secondary">Aramex</h5>
             <p class="text-gray-300">Delivery Unlimited</p>
@@ -101,7 +101,7 @@
       </div>
       <div class="group relative bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
-          <img src="/public/assets/kwizy/wahab.png" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent" >
+          <img src="/assets/kwizy/wahab.png" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent" >
           <div class="space-y-2">
             <h5 class="text-xl font-semibold text-white transition group-hover:text-secondary">Wahab San Frontiers</h5>
             <p class="text-gray-300">We deliver your products on time  with pure safety.</p>
@@ -110,7 +110,7 @@
       </div>
       <div class="group relative bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
-          <img src="/public/assets/kwizy/fedex.png" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent" >
+          <img src="/assets/kwizy/fedex.png" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent" >
           <div class="space-y-2">
             <h5 class="text-xl font-semibold text-white transition group-hover:text-secondary">FedEx</h5>
             <p class="text-gray-300">Fast and efficient.</p>
@@ -119,7 +119,7 @@
       </div>
       <div class="group relative bg-gray-800 transition hover:z-[1] hover:shadow-2xl hover:shadow-gray-600/10">
         <div class="relative space-y-8 py-12 p-8">
-          <img src="/public/assets/kwizy/fit.jpg" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent">
+          <img src="/assets/kwizy/fit.jpg" loading="lazy" width="200" height="200"class="w-12 h-12 rounded-full" style="color:transparent">
           <div class="space-y-2">
             <h5 class="text-xl font-semibold text-white transition group-hover:text-secondary">Freight In Time (FIT) express</h5>
             <p class="text-gray-300">Not Just Logistics.</p>
