--- a/src/components/Contactsection.astro
+++ b/src/components/Contactsection.astro
@@ -46,8 +46,14 @@
                 
                 <p class="text-base text-body-color dark:text-dark-6"> +256 773 117 645</p>
                 
+                <p class="text-base text-body-color dark:text-dark-6"> victoryvisionug@gmail.com </p>
                 
-                <h5 class="mb-[18px] text-lg font-semibold text-dark dark:text-white">victoryvisionug@gmail.com</h5>
+                <!-- LinkedIn Button -->
+<a href="https://www.linkedin.com/in/victory-vision-limited-9779722b0/" target="_blank" class="bg-blue-700 text-white font-bold py-2 px-4 rounded inline-flex items-center">
+  <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M100.3 480H7.4V180.9h92.9V480zm-46.1-317c-29.4 0-53.2-24.3-53.2-54.3s23.8-54.3 53.2-54.3 53.2 24.3 53.2 54.3-23.8 54.3-53.2 54.3zm317 317h-92.9V312c0-40-1.4-91.5-55.7-91.5-55.7 0-64.2 43.6-64.2 88.6v170.9h-92.8V180.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V480z"/></svg>
+  <span>LinkedIn</span>
+</a>
+
                 <p class="text-base text-body-color dark:text-dark-6 mt-1">
                   
                 </p>
