--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -35,7 +35,7 @@
         <div class="wow fadeInUp relative z-10 mx-auto max-w-[845px]" data-wow-delay=".25s">
           <div class="mt-16">
             <img
-              src="/assets/kwizy/main.jpg"
+              src="/assets/kwizy/kwizy_new.jfif"
               alt="hero"
               class="mx-auto max-w-full rounded-t-xl rounded-tr-xl"
             />
